@@ -1,5 +1,11 @@
 2008-05-15  Luca Bruno  <lethalman88@gmail.com>
 
+	* syx/syx-interp.c (syx_interp_enter_context): do not really switch the process
+	(_syx_interp_state_update): checks must be done before calling the method
+	(_syx_interp_switch_process): checks must be done before calling the method
+	(syx_interp_swap_context):
+	(syx_process_execute_scheduled): checks have to be done before calling the method
+
 	* syx/syx-memory.c (_syx_memory_write_process_stack): fixed warnings
 
 	* syx/syx-interp.h: add missing interp functions
